Fixed issue for images width on Safari

--- a/src/scss/components/_product-card.scss
+++ b/src/scss/components/_product-card.scss
@@ -20,7 +20,7 @@
 
 		img {
 			max-height: 100%;
-			width: max-content !important;
+			width: auto;
 		}
 	}
 
